# psychopy-ETReading

./: README.md  pyproject.toml
psychopy_ETReading/: __init__.py
psychopy_ETReading/components/ETText/: __init__.py
tests/: test_entry_points.py
tests/test_coder/: test_ExampleVisualStim.py
