[project]
# the name of your plugin (required)
name = "psychopy-ETReading"
# the current version of the plugin (required)
version = "0.0.5" 
# a brief description of what your plugin does
description = "Component for Eyetracking-while-reading experiments with with word-level ROIs"
# link to the README.md file for a longer description of the project
readme = "README.md"
# contact information for yourself and anyone else who worked on the plugin 
authors = [
  { name = "Suhas Arehalli", email = "sarehall@macalester.edu" },
]
# a license tells other people how to use your code and protects you from stealing
license = { text = "MIT" }
# add any packages which your plugin needs in order to run
dependencies = []

[project.optional-dependencies]
# dependencies for building the docs
docs = [
  "psychopy",
  "psychopy-plugin-theme",
  "sphinx",
  "furo",
]
# dependencies for running the test suite
tests = [
  "psychopy",
  "pytest",
]

[project.entry-points."psychopy.experiment.components"]
# if you want a Component to appear in the "Components" panel, add its class here
ETTextComponent = "psychopy_ETReading.components.ETText:ETTextComponent"

[tool.setuptools.package-data]
# any resources you want including in the package, add their file extensions here (e.g. "*.wav" if you want audio files)
"*" = ["*.png"] 

[tool.setuptools.packages.find]
# any folders to ignore when building the Python package for this plugin
exclude = ["docs*", "docs_src*", "tests*"]
